[gd_scene load_steps=16 format=3 uid="uid://cfhtr4udtwv4f"]

[ext_resource type="Script" path="res://scenes/maps/levels/level2/level2.gd" id="1_i8qa6"]
[ext_resource type="PackedScene" uid="uid://roqpwa5qcb25" path="res://scenes/maps/tilemaps/rpg_urban_pack.tscn" id="1_jmth1"]
[ext_resource type="PackedScene" uid="uid://bld3ugk8ghfek" path="res://scenes/maps/tilemaps/rpg_roguelike_pack.tscn" id="2_dsuvj"]
[ext_resource type="PackedScene" uid="uid://1kiq6e3l3gwt" path="res://scenes/maps/tilemaps/rpg_roguelike_indoors.tscn" id="3_mc30f"]
[ext_resource type="PackedScene" uid="uid://citkhfbxb0erb" path="res://scenes/player/player.tscn" id="4_m76e0"]
[ext_resource type="PackedScene" uid="uid://r0u8b33fyt3m" path="res://scenes/objects/candle_light/candle_light.tscn" id="5_app88"]
[ext_resource type="PackedScene" uid="uid://st0dlgxpx4qe" path="res://scenes/objects/wine_rack/wine_rack.tscn" id="7_4tyn1"]
[ext_resource type="PackedScene" uid="uid://dvptcwiy8f14h" path="res://scenes/objects/cross/cross.tscn" id="7_7ccuq"]
[ext_resource type="PackedScene" uid="uid://hmo8uwbx841y" path="res://scenes/objects/box/box.tscn" id="8_uuglv"]
[ext_resource type="PackedScene" uid="uid://d0j42x64fnnja" path="res://scenes/objects/star_particle/star_particle.tscn" id="9_j0yco"]
[ext_resource type="PackedScene" uid="uid://bpirph6jbkhhr" path="res://scenes/objects/note/note.tscn" id="10_c0lv7"]
[ext_resource type="PackedScene" uid="uid://1udb4y56c6tt" path="res://scenes/monsters/big_monster.tscn" id="12_1mxx4"]
[ext_resource type="Script" path="res://scenes/monsters/monster_movment.gd" id="13_pc6c2"]
[ext_resource type="AudioStream" uid="uid://cm0gb5n0c4q4l" path="res://assets/sounds/BGS/music_zapsplat_haunted_staircase.mp3" id="14_cj4o5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_shlu3"]
size = Vector2(38, 25)

[node name="level2" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_i8qa6")

[node name="RPGUrbanPack" parent="." instance=ExtResource("1_jmth1")]
z_index = 1
y_sort_enabled = true

[node name="RPGRoguelikePack" parent="." instance=ExtResource("2_dsuvj")]
y_sort_enabled = true
layer_0/y_sort_enabled = true
layer_0/tile_data = PackedInt32Array(-589835, 983040, 13, -524299, 983040, 13, -458763, 983040, 13, -393227, 983040, 13, -327691, 983040, 13, -262155, 983040, 13, -196619, 983040, 13, -131083, 983040, 13, -65547, 983040, 13, -11, 983040, 13, 65525, 1048576, 13, -589834, 1114112, 15, -524298, 917504, 15, -458762, 524288, 2, -393226, 524288, 2, -327690, 524288, 2, -262154, 524288, 2, -196618, 524288, 2, -131082, 524288, 2, -65546, 524288, 2, -10, 524288, 2, 65526, 917504, 12, -589833, 1245184, 20, -524297, 851968, 15, -458761, 524288, 2, -393225, 524288, 2, -327689, 524288, 2, -262153, 524288, 2, -196617, 524288, 2, -131081, 524288, 2, -65545, 524288, 2, -9, 524288, 2, 65527, 917504, 12, -589832, 1179648, 15, -524296, 851968, 15, -458760, 524288, 2, -393224, 524288, 2, -327688, 524288, 2, -262152, 524288, 2, -196616, 524288, 2, -131080, 524288, 2, -65544, 524288, 2, -8, 524288, 2, 65528, 917504, 12, -589831, 1179648, 15, -524295, 851968, 15, -458759, 524288, 2, -393223, 524288, 2, -327687, 524288, 2, -262151, 524288, 2, -196615, 524288, 2, -131079, 524288, 2, -65543, 524288, 2, -7, 524288, 2, 65529, 917504, 12, -589830, 1179648, 15, -524294, 851968, 15, -458758, 524288, 2, -393222, 524288, 2, -327686, 524288, 2, -262150, 524288, 2, -196614, 524288, 2, -131078, 524288, 2, -65542, 524288, 2, -6, 524288, 2, 65530, 917504, 12, -589829, 1179648, 15, -524293, 851968, 15, -458757, 524288, 2, -393221, 524288, 2, -327685, 524288, 2, -262149, 524288, 2, -196613, 524288, 2, -131077, 524288, 2, -65541, 524288, 2, -5, 524288, 2, 65531, 917504, 12, -589828, 1179648, 15, -524292, 1114112, 20, -458756, 524288, 2, -393220, 524288, 2, -327684, 524288, 2, -262148, 524288, 2, -196612, 524288, 2, -131076, 524288, 2, -65540, 524288, 2, -4, 524288, 2, 65532, 917504, 12, -524291, 851968, 15, -458755, 524288, 2, -393219, 524288, 2, -327683, 524288, 2, -262147, 524288, 2, -196611, 524288, 2, -131075, 524288, 2, -65539, 524288, 2, -3, 524288, 2, 65533, 917504, 12, -524290, 851968, 15, -458754, 524288, 2, -393218, 524288, 2, -327682, 524288, 2, -262146, 524288, 2, -131074, 524288, 2, -65538, 524288, 2, -2, 524288, 2, 65534, 917504, 12, -524289, 851968, 15, -458753, 524288, 2, -393217, 524288, 2, -327681, 524288, 2, -262145, 524288, 2, -196609, 524288, 2, -131073, 524288, 2, -65537, 524288, 2, -1, 524288, 2, 65535, 983040, 12, -655360, 1179648, 15, -524288, 524288, 2, -458752, 524288, 2, -393216, 524288, 2, -327680, 524288, 2, -262144, 524288, 2, -196608, 524288, 2, -131072, 524288, 2, -65536, 524288, 2, 0, 524288, 2, -655359, 1179648, 15, -524287, 524288, 2, -458751, 524288, 2, -393215, 524288, 2, -327679, 524288, 2, -262143, 524288, 2, -196607, 524288, 2, -131071, 524288, 2, -65535, 524288, 2, 1, 851968, 12, -655358, 1245184, 19, -524286, 524288, 2, -458750, 524288, 2, -393214, 524288, 2, -327678, 524288, 2, -262142, 524288, 2, -196606, 524288, 2, -131070, 524288, 2, -65534, 524288, 2, 2, 917504, 12, -655357, 1179648, 15, -524285, 524288, 2, -458749, 524288, 2, -393213, 524288, 2, -327677, 1048576, 12, -262141, 983040, 13, -196605, 983040, 13, -131069, 983040, 13, -65533, 983040, 13, 3, 1245184, 12, -655356, 1179648, 15, -589820, 851968, 15, -458748, 524288, 2, -393212, 524288, 2, -327676, 917504, 12, -262140, 1114112, 15, -196604, 917504, 15, -131068, 524288, 2, -65532, 524288, 2, 4, 917504, 12, -655355, 1179648, 15, -589819, 851968, 15, -458747, 524288, 2, -393211, 524288, 2, -327675, 917504, 12, -262139, 1245184, 19, -65531, 524288, 2, 5, 917504, 12, -655354, 1179648, 15, -589818, 1114112, 20, -458746, 524288, 2, -393210, 524288, 2, -327674, 917504, 12, -262138, 1179648, 15, -196602, 851968, 15, -65530, 524288, 2, 6, 917504, 12, -655353, 1245184, 19, -589817, 851968, 15, -458745, 524288, 2, -393209, 524288, 2, -327673, 983040, 12, -262137, 1245184, 15, -196601, 1179648, 20, -131065, 524288, 2, -65529, 524288, 2, 7, 917504, 12, -655352, 1179648, 15, -589816, 851968, 15, -458744, 524288, 2, -393208, 524288, 2, -327672, 524288, 2, -262136, 524288, 2, -196600, 524288, 2, -131064, 524288, 2, -65528, 524288, 2, 8, 917504, 12, -655351, 1179648, 15, -589815, 851968, 15, -524279, 524288, 2, -393207, 524288, 2, -327671, 851968, 12, -262135, 1114112, 15, -196599, 1048576, 20, -131063, 524288, 2, -65527, 524288, 2, 9, 917504, 12, -655350, 1179648, 15, -589814, 851968, 15, -524278, 524288, 2, -393206, 524288, 2, -327670, 917504, 12, -262134, 1179648, 15, -196598, 851968, 15, -131062, 524288, 2, -65526, 524288, 2, 10, 917504, 12, -655349, 1179648, 15, -589813, 851968, 15, -524277, 524288, 2, -393205, 524288, 2, -327669, 917504, 12, -262133, 1245184, 20, -196597, 851968, 15, -131061, 524288, 2, -65525, 524288, 2, 11, 917504, 12, -262131, 983040, 13, -262132, 1245184, 15, -327668, 917504, 12, -196596, 1048576, 15, -131059, 983040, 13, -65523, 983040, 13, -655348, 1245184, 20, -589812, 1048576, 15, -524276, 524288, 2, -393204, 524288, 2, -131060, 524288, 2, -65524, 524288, 2, 12, 917504, 12, -655347, 983040, 13, -589811, 983040, 13, -524275, 983040, 13, -458739, 983040, 13, -327667, 1179648, 13, -196595, 983040, 13, 13, 1114112, 13, -720884, 917504, 12, -720885, 917504, 12, -720886, 917504, 12, -720887, 917504, 12, -720888, 917504, 12, -720889, 917504, 12, -720890, 917504, 12, -720891, 917504, 12, -720892, 917504, 12, -720893, 917504, 12, -720894, 917504, 12, -720895, 917504, 12, -720896, 917504, 12, -655361, 917504, 12, -655362, 917504, 12, -655363, 917504, 12, -655364, 917504, 12, -655365, 917504, 12, -655366, 917504, 12, -655367, 917504, 12, -655368, 917504, 12, -655369, 917504, 12, -655370, 917504, 12, -720883, 1114112, 12, -655371, 1048576, 12, 131071, 1048576, 15, 131070, 851968, 15, 131069, 851968, 15, 131068, 851968, 15, 131067, 851968, 15, 131066, 851968, 15, 131065, 851968, 15, 131064, 851968, 15, 131063, 851968, 15, 131062, 851968, 15, 131061, 917504, 15, 65537, 917504, 15, 65538, 851968, 15, 65539, 851968, 15, 65540, 851968, 15, 65541, 851968, 15, 65542, 851968, 15, 65543, 851968, 15, 65544, 851968, 15, 65545, 851968, 15, 65546, 851968, 15, 65547, 851968, 15, 65548, 851968, 15, 65549, 1048576, 15, 65536, 524288, 65538, -589827, 1179648, 15, -589826, 1245184, 20, -589825, 1179648, 15, -589824, 1114112, 20, -589823, 851968, 15, -589822, 851968, 15, -589821, 851968, 15, -524284, 524288, 2, -524283, 524288, 2, -524282, 524288, 2, -524281, 524288, 2, -524280, 524288, 2, -458743, 524288, 2, -458742, 524288, 2, -458740, 524288, 2, -393203, 983040, 13, -458741, 524288, 2, -131066, 524288, 2, -131067, 524288, 2, -196603, 851968, 15, -196610, 524288, 2)
layer_1/name = ""
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = true
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array(-589825, 1966080, 8, -655360, 1900544, 8, -65543, 720896, 23, -65542, 720896, 23, -65541, 720896, 23, -65540, 720896, 23, -65539, 786432, 23, -131075, 786432, 23, -196611, 786432, 23, -262147, 786432, 22, -262153, 655360, 22, -262148, 720896, 22, -262149, 720896, 22, -262150, 720896, 22, -262151, 720896, 22, -262152, 720896, 22, -196617, 655360, 23, -131081, 655360, 23, -65545, 655360, 23, -65544, 720896, 23, -196612, 720896, 23, -131076, 720896, 23, -131077, 720896, 23, -131078, 720896, 23, -131079, 720896, 23, -196615, 720896, 23, -131080, 720896, 23, -196616, 720896, 23, -196614, 720896, 23, -196613, 720896, 23, -3, 786432, 24, -4, 720896, 24, -5, 720896, 24, -6, 720896, 24, -7, 720896, 24, -8, 720896, 24, -9, 655360, 24, -589830, 2031616, 3, -589833, 2031616, 2, -589812, 720896, 6, -589813, 720896, 5, -655349, 786432, 5, -655348, 786432, 6, -655350, 786432, 4, -589814, 720896, 4, -589815, 851968, 5, -655351, 655360, 5, -393204, 2097152, 9)
layer_2/name = ""
layer_2/enabled = true
layer_2/modulate = Color(1, 1, 1, 1)
layer_2/y_sort_enabled = true
layer_2/y_sort_origin = 0
layer_2/z_index = 0
layer_2/tile_data = PackedInt32Array(-196618, 3211264, 9)
layer_3/name = ""
layer_3/enabled = true
layer_3/modulate = Color(1, 1, 1, 1)
layer_3/y_sort_enabled = true
layer_3/y_sort_origin = 0
layer_3/z_index = 0
layer_3/tile_data = PackedInt32Array(-262134, 2031616, 10, -65532, 3211264, 9, -458756, 3211264, 9, -655356, 1703936, 8, -589819, 2097152, 11, -589820, 2097152, 11, -589821, 2097152, 11, -262142, 3145728, 7, -65538, 3145728, 7, -327687, 3145728, 4, -131060, 3145728, 2, -393212, 3145728, 2, -196603, 3538944, 8)

[node name="RPGRoguelikeIndoors" parent="." instance=ExtResource("3_mc30f")]
position = Vector2(-3, 0)
layer_0/y_sort_enabled = true
layer_0/z_index = 1
layer_0/tile_data = PackedInt32Array(-196598, 1507328, 8, -196597, 1572864, 8, -262133, 1179648, 0)
layer_1/name = ""
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = true
layer_1/y_sort_origin = 0
layer_1/z_index = 1
layer_1/tile_data = PackedInt32Array(-327690, 655360, 14, -393226, 655360, 13, -458762, 720896, 15, -524298, 655360, 12, -524297, 327680, 12, -524296, 917504, 15, -589832, 983040, 15, -524295, 458752, 12, -524294, 393216, 12, -524293, 589824, 12, -131080, 0, 9, -131076, 131072, 9, -131077, 65536, 9, -131078, 65536, 9, -131079, 65536, 9, -196616, 0, 7, -196615, 0, 7, -196614, 0, 7, -196613, 0, 7, -196612, 0, 7, -262154, 1048576, 0, -196618, 786432, 9, -65546, 786432, 11, -131082, 786432, 10, -65540, 65536, 6, -65541, 65536, 6, -65542, 65536, 6, -65543, 65536, 6, -65544, 65536, 6, -10, 1048576, 0)
layer_2/name = ""
layer_2/enabled = true
layer_2/modulate = Color(1, 1, 1, 1)
layer_2/y_sort_enabled = true
layer_2/y_sort_origin = 0
layer_2/z_index = 1
layer_2/tile_data = PackedInt32Array(-131082, 1048576, 6)

[node name="Player" parent="." instance=ExtResource("4_m76e0")]
z_index = 1
position = Vector2(16, 24)

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="."]
energy = 0.9
blend_mode = 1

[node name="candle_light" parent="." instance=ExtResource("5_app88")]
position = Vector2(-307, -84)

[node name="candle_light2" parent="." instance=ExtResource("5_app88")]
position = Vector2(174, -75)

[node name="WineRack" parent="." instance=ExtResource("7_4tyn1")]
z_index = 1
y_sort_enabled = true
position = Vector2(-16, -262)
lock_rotation = true

[node name="WineRack2" parent="." instance=ExtResource("7_4tyn1")]
z_index = 1
y_sort_enabled = true
position = Vector2(16, -262)
lock_rotation = true

[node name="Cross" parent="." instance=ExtResource("7_7ccuq")]
z_index = 1
z_as_relative = false
position = Vector2(202, -87)

[node name="Box" parent="." instance=ExtResource("8_uuglv")]
z_index = 1
position = Vector2(271, -252)

[node name="Note" parent="." instance=ExtResource("10_c0lv7")]
z_index = 1
position = Vector2(178, -18)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="star_particle" parent="CanvasLayer" instance=ExtResource("9_j0yco")]
z_index = 5
z_as_relative = false
position = Vector2(203, -89)
scale = Vector2(0.5, 0.5)

[node name="star_particle2" parent="CanvasLayer" instance=ExtResource("9_j0yco")]
z_index = 5
z_as_relative = false
position = Vector2(174, -17)
scale = Vector2(0.5, 0.5)

[node name="star_particle3" parent="CanvasLayer" instance=ExtResource("9_j0yco")]
z_index = 5
z_as_relative = false
position = Vector2(270, -245)
scale = Vector2(0.5, 0.5)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(16, 50.5)
shape = SubResource("RectangleShape2D_shlu3")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -791.0
offset_top = -643.0
offset_right = 833.0
offset_bottom = 355.0
color = Color(0, 0, 0, 1)

[node name="Timer" type="Timer" parent="."]
wait_time = 15.0

[node name="BigMonster" parent="." instance=ExtResource("12_1mxx4")]
z_index = 6
position = Vector2(17, 74)
script = ExtResource("13_pc6c2")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("14_cj4o5")
volume_db = -17.992
autoplay = true

[connection signal="body_entered" from="Area2D" to="." method="_on_body_enter"]
[connection signal="body_exited" from="Area2D" to="." method="_on_body_leave"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
